--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "Keeps your url params in sync with react state",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "qs": "^6.10.5",
+    "react": "^18.2.0",
+    "react-use": "^17.4.0",
+    "typescript": "^4.7.4"
+  }
 }
